--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   text-transform: capitalize;
 }
 
-.App .item-todo .item-delete {
+.App .item-todo .item-icon {
   display: inline-block;
   cursor: pointer;
   float: right;
